# geki2

./: ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac  configure.in  geki2.spec.in
bmp/: Makefile.am  Makefile.in
data/: .score  Makefile.am  Makefile.in
src/: Makefile.am  Makefile.in  boss.c  boss.h  extern.h  game.c  game.h  geki2.h  load.c  load.h  main.c  misc.c  misc.h  my.c  my.h  opening.c  opening.h  ranking.c  ranking.h  your.c  your.h
wav/: Makefile.am  Makefile.in
