bmpdir = $(prefix)/share/geki2/bmp
bmp_DATA =   back1.bmp boss2.bmp enemyshot4.bmp kuru.bmp myshot.bmp back2.bmp\
	     boss3.bmp enemyshot5.bmp mboss.bmp uraura.bmp back3.bmp\
	     boss3laser.bmp flash.bmp uturn.bmp back4.bmp back6.bmp boss6.bmp\
	     boss4.bmp houdai.bmp my.bmp warning.bmp back5.bmp boss5.bmp\
	     ilaser.bmp mylaser1.bmp zako.bmp bomb1.bmp enemyshot1.bmp\
	     ishot.bmp mylaser2.bmp bomb2.bmp enemyshot2.bmp item.bmp\
             mylaser3.bmp boss1.bmp enemyshot3.bmp jiwa.bmp mylaser4.bmp\
	     choro.bmp elaser.bmp
EXTRA_DIST = back1.bmp boss2.bmp enemyshot4.bmp kuru.bmp myshot.bmp back2.bmp\
	     boss3.bmp enemyshot5.bmp mboss.bmp uraura.bmp back3.bmp\
	     boss3laser.bmp flash.bmp uturn.bmp back4.bmp back6.bmp boss6.bmp\
	     boss4.bmp houdai.bmp my.bmp warning.bmp back5.bmp boss5.bmp\
	     ilaser.bmp mylaser1.bmp zako.bmp bomb1.bmp enemyshot1.bmp\
	     ishot.bmp mylaser2.bmp bomb2.bmp enemyshot2.bmp item.bmp\
             mylaser3.bmp boss1.bmp enemyshot3.bmp jiwa.bmp mylaser4.bmp\
	     choro.bmp elaser.bmp
