wavdir = $(prefix)/share/geki2/wav
wav_DATA =   bgm1.wav bgm2.wav bgm3.wav bgm4.wav bgm5.wav\
	     bomb.wav laser5.wav warning.wav boss.wav open.wav\
	     laser.wav pow.wav go.wav bgm6.wav
EXTRA_DIST = bgm1.wav bgm2.wav bgm3.wav bgm4.wav bgm5.wav\
	     bomb.wav laser5.wav warning.wav boss.wav open.wav\
	     laser.wav pow.wav go.wav bgm6.wav
